<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/denim"
        tools:context=".MainActivity">
    

    <TextView
            android:layout_width="@dimen/screen_signup_width"
            android:layout_height="@dimen/screen_signup_height"
            android:text="@string/screen_signup"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/screen_signup_size"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.045"
            android:id="@+id/screen_signup"/>

    <TextView
            android:text="@string/screen_who"
            android:textColor="@color/stone"
            android:textSize="@dimen/screen_who_size"
            android:textAlignment="center"
            android:layout_width="@dimen/screen_who_width"
            android:layout_height="@dimen/screen_who_height"
            android:id="@+id/screen_who"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/screen_signup"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.032"/>

    <ImageButton
            android:background="@color/transparent"
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            app:srcCompat="@mipmap/ic_launcher_parent"
            android:id="@+id/button_parent"
            tools:layout_editor_absoluteY="@dimen/image_button_absoluteY"
            app:layout_constraintEnd_toStartOf="@+id/button_child"/>

    <ImageButton
            android:background="@color/transparent"
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            app:srcCompat="@mipmap/ic_launcher_child"
            android:id="@+id/button_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            tools:layout_editor_absoluteY="@dimen/image_button_absoluteY"/>

    <ImageButton
            android:background="@color/transparent"
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            app:srcCompat="@mipmap/ic_launcher_teacher"
            tools:layout_editor_absoluteY="@dimen/image_button_absoluteY"
            android:id="@+id/button_teacher"
            app:layout_constraintStart_toEndOf="@+id/button_child"/>

    <TextView
            android:text="@string/screen_parent"
            android:textColor="@color/biscotti"
            android:textAlignment="center"
            android:layout_width="@dimen/parent_child_teacher_width"
            android:layout_height="@dimen/parent_child_teacher_height"
            tools:layout_editor_absoluteX="@dimen/parent_absoluteX"
            android:id="@+id/screen_parent"
            tools:layout_editor_absoluteY="@dimen/parent_child_teacher_absoluteY"/>

    <TextView
            android:text="@string/screen_child"
            android:textColor="@color/tangerine"
            android:textAlignment="center"
            android:layout_width="@dimen/parent_child_teacher_width"
            android:layout_height="@dimen/parent_child_teacher_height"
            android:id="@+id/screen_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            tools:layout_editor_absoluteY="@dimen/parent_child_teacher_absoluteY"/>

    <TextView
            android:text="@string/screen_teacher"
            android:textAlignment="center"
            android:textColor="@color/teal"
            android:layout_width="@dimen/parent_child_teacher_width"
            android:layout_height="@dimen/parent_child_teacher_height"
            tools:layout_editor_absoluteX="@dimen/teacher_absoluteX"
            android:id="@+id/screen_teacher"
            tools:layout_editor_absoluteY="@dimen/parent_child_teacher_absoluteY"/>

    <TextView
            android:text="@string/screen_user"
            android:textColor="@color/stone"
            android:background="@drawable/contour"
            android:textAlignment="center"
            android:textSize="@dimen/screen_uepcp_size"
            android:layout_width="@dimen/screen_uepcp_width"
            android:layout_height="@dimen/screen_uepcp_height"
            android:id="@+id/screen_user"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.438"/>

    <TextView
            android:text="@string/screen_email"
            android:textColor="@color/stone"
            android:background="@drawable/contour"
            android:textAlignment="center"
            android:textSize="@dimen/screen_uepcp_size"
            android:layout_width="@dimen/screen_uepcp_width"
            android:layout_height="@dimen/screen_uepcp_height"
            android:id="@+id/screen_email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.533"/>

    <TextView
            android:text="@string/screen_pass"
            android:textColor="@color/stone"
            android:background="@drawable/contour"
            android:textAlignment="center"
            android:textSize="@dimen/screen_uepcp_size"
            android:layout_width="@dimen/screen_uepcp_width"
            android:layout_height="@dimen/screen_uepcp_height"
            android:id="@+id/screen_pass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.626"/>

    <TextView
            android:text="@string/screen_confirmpass"
            android:textColor="@color/stone"
            android:background="@drawable/contour"
            android:textAlignment="center"
            android:textSize="@dimen/screen_uepcp_size"
            android:layout_width="@dimen/screen_uepcp_width"
            android:layout_height="@dimen/screen_uepcp_height"
            android:id="@+id/screen_confilmpass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.722"/>

    <ImageView
            android:layout_width="@dimen/screen_icon"
            android:layout_height="@dimen/screen_icon"
            app:srcCompat="@mipmap/ic_launcher_user"
            android:id="@+id/icon_user"
            app:layout_constraintStart_toStartOf="@+id/screen_user"
            app:layout_constraintTop_toTopOf="@+id/screen_user"
            app:layout_constraintBottom_toBottomOf="@+id/screen_user"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="@dimen/margin_icon"
            android:layout_marginStart="@dimen/margin_icon"/>

    <ImageView
            android:layout_width="@dimen/screen_icon"
            android:layout_height="@dimen/screen_icon"
            app:srcCompat="@mipmap/ic_launcher_email"
            android:id="@+id/icon_email"
            app:layout_constraintStart_toStartOf="@+id/screen_email"
            android:layout_marginLeft="@dimen/margin_icon"
            android:layout_marginStart="@dimen/margin_icon"
            app:layout_constraintTop_toTopOf="@+id/screen_email"
            app:layout_constraintBottom_toBottomOf="@+id/screen_email"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="@dimen/screen_icon"
            android:layout_height="@dimen/screen_icon"
            app:srcCompat="@mipmap/ic_launcher_lock"
            android:id="@+id/icon_pass"
            app:layout_constraintStart_toStartOf="@+id/screen_pass"
            android:layout_marginLeft="@dimen/margin_icon"
            android:layout_marginStart="@dimen/margin_icon"
            app:layout_constraintTop_toTopOf="@+id/screen_pass"
            app:layout_constraintBottom_toBottomOf="@+id/screen_pass"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="@dimen/screen_icon"
            android:layout_height="@dimen/screen_icon"
            app:srcCompat="@mipmap/ic_launcher_lock"
            android:id="@+id/icon_confilmpass"
            app:layout_constraintStart_toStartOf="@+id/screen_confilmpass"
            android:layout_marginLeft="@dimen/margin_icon"
            android:layout_marginStart="@dimen/margin_icon"
            app:layout_constraintTop_toTopOf="@+id/screen_confilmpass"
            app:layout_constraintBottom_toBottomOf="@+id/screen_confilmpass"
            app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:text="@string/button_signup"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_signup_width"
            android:layout_height="@dimen/button_signup_height"
            android:background="@drawable/signup_background"
            android:id="@+id/button_signup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/screen_confilmpass"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/screen_login"/>


    <TextView
            android:text="@string/screen_login"
            android:textColor="@color/white"
            android:layout_width="@dimen/screen_login_width"
            android:layout_height="@dimen/screen_login_height"
            android:id="@+id/screen_login"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            app:layout_constraintVertical_bias="0.963"
            app:layout_constraintHorizontal_bias="0.37"/>

    <TextView
            android:text="@string/button_login"
            android:textColor="@color/cider"
            android:layout_width="@dimen/button_login_width"
            android:layout_height="@dimen/button_login_height"
            android:id="@+id/button_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.767"
            app:layout_constraintVertical_bias="0.963"/>



</androidx.constraintlayout.widget.ConstraintLayout>